--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
     "react-player": "^2.12.0",
+    "react-ratio": "^0.1.5",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
