--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^10.15.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
