--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
+    "@types/react-image-crop": "^8.1.6",
     "axios": "^1.4.0",
     "framer-motion": "^10.15.0",
     "js-cookie": "^3.0.5",
@@ -32,7 +33,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^5.0.1",
-    "react-image-crop": "^10.1.8",
+    "react-image-crop": "^11.0.5",
     "react-player": "^2.12.0",
     "react-ratio": "^0.1.5",
     "react-redux": "^8.1.2",
