--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-image-crop": "^8.1.6",
     "axios": "^1.4.0",
+    "cropperjs": "^1.6.1",
     "framer-motion": "^10.15.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
