--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^5.0.1",
